# agentic-trading

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  ENV_SETUP.md  Procfile.dev  README.md  conftest.py  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  sys.stdout  test_redis.py
.cursor/: code_review_checklist.mdc  code_style_patterns.mdc  core_principles.mdc  file_organization.mdc  git_practices.mdc  project_overview.mdc
.cursor/rules/: architecture.mdc  broker-composition-pattern.mdc  code_consistency.mdc  code_review_checklist.mdc  code_style.mdc  code_style_patterns.mdc  comments.mdc  core_principles.mdc  documentation_accuracy.mdc  essentials.mdc  module_structure.mdc  new_feature_checklist.mdc  no_legacy_fallbacks.mdc  performance_guidelines.mdc  security_data_handling.mdc  testing_patterns.mdc  typescript_standards.mdc
.cursor/rules/patterns/: broker_composition.mdc  error_handling.mdc  performance.mdc  testing.mdc
.cursor/rules/terminal/: python_commands.mdc
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  main.py  schemas.py
apps/api/core/: dependencies.py  experiments_service.py  models.py  redis_stream.py
apps/api/routers/: experiments_http.py  experiments_ws.py  system.py
apps/api/tests/: test_main_guard.py
apps/cli/: __init__.py  api_client.py
apps/cli/commands/: __init__.py  core.py  data.py  simulate.py  training.py
apps/cli/tests/: test_watch_experiment.py
apps/dashboard/: README.md  __init__.py  app.py  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
apps/dashboard/.astro/: settings.json
apps/dashboard/components/: __init__.py  navigation.py
apps/dashboard/pages/: __init__.py  data_pipeline.py  experiments.py  overview.py  single_experiment.py  single_model.py
apps/dashboard/services/: __init__.py  mlflow_service.py
apps/dashboard/src/: env.d.ts
config/: agent_config.yaml  data_config.yaml  trading_config.yaml
configs/: agent_config.yaml  qlib_config.yaml  trading_config.yaml
docs/: README.md  architecture.md  configuration.md  dev_environment.md  development.md  dynamic_environment.md  experiment_data_management.md  getting-started.md  getting_started.md  implementation_plan.md  simulation_mode.md  technical-overview.md  technical_overview.md
examples/: training_with_date_ranges.py
integration_tests/: conftest.py  test_agent_learning.py  test_aim_integration.py  test_backend_schema_validation.py  test_experiment_lifecycle.py  test_infrastructure_integration.py  test_market_data_real_flow.py  test_tracking_health_monitoring.py  test_training_data_robustness.py  test_training_integration.py
scripts/: demonstrate_feature_engineering.py  intelligence_demo.py  run_tests.py
scripts/analysis/: backend.py  debug_no_trades.py  helpers.py  run_simulation.py
scripts/analysis/tests/: test_backend.py
scripts/dashboard/: launch_dashboard.py
scripts/data/: __init__.py  download_historical.py  dump_bin.py  prepare_data.py
scripts/dev/: smoke_training_test.py
scripts/features/: build_features.py
scripts/maintenance/: purge_invalid_experiments.py
scripts/podman/: start_aim.sh  start_redis.sh  stop_aim.sh  stop_redis.sh
scripts/setup/: init_project.py  launch_mlflow.sh
scripts/training/: optimize_agent.py  run_training_service.py  run_training_worker.py  train_agent.py
scripts/training/tests/: test_train_agent_session.py
src/: __init__.py  cli.py  exceptions.py  mlflow_utils.py  types.py
src/agents/: __init__.py  base.py  callbacks.py  factory.py  helpers.py  ppo.py  ppo_agent.py  wrapper.py
src/agents/tests/: __init__.py  test_agent_factory.py  test_base.py  test_factory.py  test_helpers.py  test_ppo.py  test_ppo_agent.py  test_wrapper.py
src/brokers/: __init__.py  base.py  exceptions.py  factory.py  forex_com.py  symbol_mapper.py
src/brokers/forex_com/: README.md  __init__.py  account.py  api.py  auth.py  broker.py  data.py  orders.py  positions.py  types.py
src/brokers/tests/: __init__.py
src/callbacks/: interrupt_callback.py  metrics_callback.py  utils.py
src/callbacks/tests/: test_interrupt_callback.py
src/data/: __init__.py  pipelines.py  processor.py
src/data/calendars/: __init__.py  base.py  factory.py  forex.py
src/data/tests/: test_download_historical.py
src/environment/: __init__.py  config.py  core.py
src/environment/actions/: __init__.py  base.py  discrete.py
src/environment/observations/: __init__.py  market.py  (+3 more)
src/environments/: __init__.py  base.py  factory.py  trading_env.py  types.py  wrappers.py
src/features/: __init__.py  calculator.py  factory.py  pipeline.py
src/intelligence/: __init__.py  config_generator.py  experiment_analyzer.py  llm_advisor.py  orchestrator.py  reasoning_tracker.py
src/market_data/: __init__.py  contracts.py  coordinator.py  download.py  exceptions.py  features.py  processing.py
src/messaging/: README.md  __init__.py  base.py  config.py  events.py  factory.py  memory_broker.py  redis_broker.py  relay.py  schema.py
src/models/: __init__.py  sb3_wrapper.py
src/simulation/: __init__.py  backtester.py  recorder.py  visualisation.py
src/strategies/: __init__.py  base.py  factory.py  rl_strategy.py
src/tracking/: README.md  __init__.py  callbacks.py  factory.py  models.py  protocols.py  utils.py
src/training/: __init__.py  config_validator.py  data_processor.py  event_publisher.py  service.py  training_executor.py  utils.py
src/types/: __init__.py  common.py  enums.py  experiments.py
src/utils/: __init__.py  config.py  config_loader.py  exceptions.py  logger.py  mlflow.py  mlflow_utils.py  settings.py  validation.py
tests/: test_exceptions.py  test_forex_com_broker.py  test_infrastructure_integration.py  test_symbol_mapper.py  test_trading_env.py  test_types.py  test_validation.py
tests/agents/: test_ppo_agent.py
tests/callbacks/: test_interrupt_callback.py  test_metrics_callback.py  test_utils.py
tests/data/: test_download_historical.py
tests/environments/: test_wrappers.py
tests/training/: test_train_agent.py  test_training_integration.py
(+130 files in other folders)
