[project]
name = "agentic-trading"
version = "0.1.0"
description = "Reinforcement Learning Trading System"
authors = [
    { name = "Zima Blue", email = "lefa@zimablue.io" }
]
requires-python = ">=3.11"
dependencies = [
    # Qlib for quantitative trading
    "pyqlib>=0.9.6",
    # Core ML/RL Libraries (torch auto-installed by stable-baselines3)
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
    # MLOps and HPO
    "mlflow>=3.1.0",
    "optuna>=4.2.0",
    # Data & Finance
    "pandas>=2.0.0",
    "numpy<2.0",
    # Configuration & Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=1.10,<2.0",
    # API Clients
    "requests>=2.31.0",
    "aiohttp>=3.12.13",
    # Intelligence & CLI
    "openai>=1.88.0",
    "typer[all]>=0.12.0",
    "fire>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
    "ruff>=0.5.5",
]
database = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
ml = [
    # Add ML dependencies separately for easier troubleshooting
    "stable-baselines3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "apps"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
]

[tool.uv.sources]
"ray" = { url = "https://test.pypi.org/simple/" }

[tool.ruff]
# ... existing code ...
# For a full list of supported rules, see:
# https://docs.astral.sh/ruff/rules/
# Note: F401 and F841 are for unused imports and variables. Consider removing in production.
select = ["E", "F", "W", "I", "N", "B", "C4", "A", "RUF"]
# Ignore only D1xx for missing docstrings, line length; keep others
ignore = ["D100", "D104", "D107", "E501", "RUF022"]

# Match Black's line length
line-length = 100

# Exclude non-existent top-level tests directory to silence E902
exclude = ["tests"]
unsafe-fixes = true

# Allow unused variables in `__init__.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"src/types/__init__.py" = ["A005"]

[tool.mypy]
# ... existing code ...
# For a comprehensive list of mypy options, see:
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "qlib.*",
    "stable_baselines3.*",
    "gymnasium.*",
    "pytest.*",
    "numpy.*",
    "pandas.*",
    "loguru.*",
    "ruamel.yaml.*",
    "ray.*",
    "mlflow.*",
    "optuna.*"
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
]

[project.scripts]
agentic = "apps.cli:app"
