[project]
name = "agentic-trading"
version = "0.1.0"
description = "A reinforcement learning based trading agent with modular architecture"
authors = [
    {name = "Author", email = "author@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    # Core Data & ML
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pyqlib>=0.9.0",
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    # Logging and Monitoring
    "loguru>=0.7.0",
    # Dashboard and Visualization
    "dash>=2.17.0",
    "plotly>=5.17.0",
    "dash-bootstrap-components>=1.5.0",
    # HTTP and Async
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
    # Messaging
    "redis>=6.2.0",
    # ML & RL (moved from optional group 'ml' to main deps to satisfy tests)
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "torch>=2.1.0",
    "ta>=0.10.2",
    # System utilities
    "psutil>=5.9.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "aim==3.29.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.5.5",
    "mypy>=1.5.0",
]
ml = [
    # RL and ML dependencies (optional for dashboard-only usage)
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "ta>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
]

[tool.ruff]
select = ["E", "F", "W", "I", "N", "B", "C4", "A", "RUF", "T"]
ignore = ["D100", "D104", "D107", "E501", "RUF022"]
line-length = 100
exclude = ["tests"]
unsafe-fixes = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"src/types/__init__.py" = ["A005"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "qlib.*",
    "stable_baselines3.*",
    "gymnasium.*",
    "pytest.*",
    "numpy.*",
    "pandas.*",
    "loguru.*",
    "dash.*",
    "plotly.*"
]
ignore_missing_imports = true

[project.scripts]
agentic = "apps.cli:app"
